--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -4,8 +4,12 @@
         "aws_region": "ap-northeast-2",
         "profile_name": "default",
         "project_name": "black-angus-lambda",
-        "runtime": "python3.9",
-        "s3_bucket": "black-angus-lambda-deploy"
+        "runtime": "python3.8",
+        "s3_bucket": "black-angus-lambda-deploy",
+        "keep_warm": false,
+        "layers": [
+            "arn:aws:lambda:ap-northeast-2:772438795256:layer:HeadlessChromium"
+        ]
     },
     "production_tokyo": {
         "aws_region": "ap-northeast-1",
