--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,5 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,macos
 
 config.toml
+bin/
+zappa_settings.py
