--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -6,6 +6,7 @@ argcomplete==2.0.0
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==21.4.0
+awslambdaric==2.0.4
 black==22.6.0
 boto3==1.24.33
 botocore==1.27.33
@@ -69,6 +70,7 @@ PyYAML==6.0
 requests==2.28.1
 rfc3986==1.5.0
 s3transfer==0.6.0
+simplejson==3.17.2
 six==1.16.0
 sniffio==1.2.0
 text-unidecode==1.3
@@ -77,7 +79,11 @@ toml==0.10.2
 tomli==2.0.1
 tqdm==4.64.0
 troposphere==4.0.2
+types-click==7.1.8
+types-Jinja2==2.11.9
+types-MarkupSafe==1.1.10
 types-orjson==3.6.2
+types-Werkzeug==1.0.9
 typing_extensions==4.3.0
 urllib3==1.26.10
 virtualenv==20.15.1
