--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,15 +1,14 @@
 {
     "production": {
-        "app_function": "blackangus.app.app",
+        "app_function": "app.app",
         "aws_region": "ap-northeast-2",
         "profile_name": "default",
         "project_name": "black-angus-lambda",
-        "runtime": "python3.8",
+        "runtime": "python3.9",
         "s3_bucket": "black-angus-lambda-deploy",
         "keep_warm": false,
-        "layers": [
-            "arn:aws:lambda:ap-northeast-2:772438795256:layer:HeadlessChromium"
-        ]
+        "memory_size": 4096,
+        "timeout_seconds": 60
     },
     "production_tokyo": {
         "aws_region": "ap-northeast-1",
