--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -8,8 +8,8 @@ async-timeout==4.0.2
 attrs==21.4.0
 awslambdaric==2.0.4
 black==22.6.0
-boto3==1.24.33
-botocore==1.27.33
+boto3==1.24.34
+botocore==1.27.34
 build==0.8.0
 certifi==2022.6.15
 cfgv==3.3.1
@@ -17,6 +17,7 @@ cfn-flip==1.3.0
 charset-normalizer==2.1.0
 click==8.1.3
 coverage==6.4.2
+cssselect==1.1.0
 distlib==0.3.5
 durationpy==0.5
 filelock==3.7.1
@@ -25,7 +26,6 @@ flake8-import-order==0.18.1
 Flask==2.1.3
 frozenlist==1.3.0
 future==0.18.2
-greenlet==1.1.2
 h11==0.12.0
 hjson==3.0.2
 httpcore==0.15.0
@@ -39,6 +39,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 kappa==0.6.0
+lxml==4.9.1
 MarkupSafe==2.1.1
 mccabe==0.6.1
 multidict==6.0.2
@@ -52,13 +53,10 @@ pep517==0.12.0
 pip-tools==6.8.0
 placebo==0.10.0
 platformdirs==2.5.2
-playwright==1.23.1
-playwright-stealth==1.0.5
 pluggy==1.0.0
 pre-commit==2.20.0
 py==1.11.0
 pycodestyle==2.8.0
-pyee==8.1.0
 pyflakes==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
@@ -79,15 +77,11 @@ toml==0.10.2
 tomli==2.0.1
 tqdm==4.64.0
 troposphere==4.0.2
-types-click==7.1.8
-types-Jinja2==2.11.9
-types-MarkupSafe==1.1.10
+types-lxml==2022.4.10
 types-orjson==3.6.2
-types-Werkzeug==1.0.9
 typing_extensions==4.3.0
 urllib3==1.26.10
 virtualenv==20.15.1
-websockets==10.1
 Werkzeug==2.1.2
 wsgi-request-logger==0.4.6
 yarl==1.7.2
