--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # requirements
 flask[async]==2.1.3
-playwright==1.23.1
 httpx==0.23.0
-playwright-stealth==1.0.5
+lxml==4.9.1
 orjson==3.7.8
+cssselect==1.1.0
 
 # development requirements
 zappa==0.54.2
@@ -20,3 +20,4 @@ time-machine==2.7.1
 types-orjson==3.6.2
 isort==5.10.1
 awslambdaric==2.0.4
+types-lxml==2022.4.10
