--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -10,6 +10,7 @@
         "timeout_seconds": 5
     },
     "production_tokyo": {
+        "s3_bucket": "black-angus-lambda-deploy-tokyo",
         "aws_region": "ap-northeast-1",
         "extends": "production"
     }
