feat: move to fastapi, still not cover lambda

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,5 @@ exclude =
     __pycache__,
     __init__.py,
     .mypy_cache,
-    .pytest_cache,
+    .pytest_cache
 import-order-style = cryptography
